--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "@opentui/react": "^0.1.74",
     "chalk": "^5.6.2",
     "react": "^19.2.3",
-    "strip-ansi": "^7.1.2"
+    "strip-ansi": "^7.1.2",
+    "tree-kill": "^1.2.2"
   }
 }
