--- a/package.json
+++ b/package.json
@@ -1,8 +1,11 @@
 {
-  "name": "start",
-  "version": "1.0.0",
+  "name": "startall",
+  "version": "0.0.3",
   "description": "",
   "main": "index.js",
+  "bin": {
+    "startall": "./index.js"
+  },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "bun index.js",
@@ -11,9 +14,13 @@
     "demo:worker": "node -e \"setInterval(() => console.log('Processing jobs...'), 500)\"",
     "demo:worker2": "node -e \"setInterval(() => console.log('Processing jobs...'), 100)\""
   },
-  "keywords": [],
+"keywords": [],
   "author": "",
   "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/bzbetty/startall.git"
+  },
   "type": "module",
   "dependencies": {
     "@opentui/core": "^0.1.74",
