--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "demo:frontend": "node -e \"setInterval(() => console.log('Server running...'), 1000)\"",
     "demo:backend": "node -e \"setInterval(() => console.log('API ready...  API ready...  API ready...  API ready...  API ready...'), 600)\"",
     "demo:worker": "node -e \"setInterval(() => console.log('Processing jobs...'), 500)\"",
-    "demo:worker2": "node -e \"setInterval(() => console.log('Processing jobs...'), 100)\""
+    "demo:worker2": "node -e \"setInterval(() => console.log('Processing jobs...'), 100)\"",
+    "demo:errors": "node -e \"setInterval(() => { console.log('\\x1b[32mOK: All good\\x1b[0m'); console.log('\\x1b[33mWARN: Deprecated API used\\x1b[0m'); console.log('\\x1b[31mERROR: Connection failed\\x1b[0m'); console.log('Normal log message'); }, 2000)\"",
+    "demo:build": "node -e \"let i=0; setInterval(() => { i++; if(i%5===0) console.log('\\x1b[31mError: Type mismatch in file.ts:42\\x1b[0m'); else if(i%3===0) console.log('\\x1b[33mWarning: Unused variable\\x1b[0m'); else console.log('\\x1b[36mCompiling module ' + i + '...\\x1b[0m'); }, 800)\""
   },
 "keywords": [],
   "author": "",
