--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -22,6 +22,9 @@ jobs:
           node-version: '20'
           registry-url: 'https://registry.npmjs.org'
 
+      - name: Upgrade npm to latest
+        run: npm install -g npm@latest
+
       - run: npm ci
 
       - name: Configure Git
@@ -49,5 +52,8 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Check npm version
+        run: npm --version
+
       - name: Publish to npm
-        run: npm publish --access public
+        run: npm publish --provenance --access public
