--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -56,4 +56,4 @@ jobs:
         run: npm --version
 
       - name: Publish to npm
-        run: npm publish --provenance --access public
+        run: npm publish --access public
